# oscope-me

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
oscope_me/: __init__.py  app.py  audio.py  cli.py  controls.py  dsp.py  file_source.py  scope.py  sdr.py
oscope_me.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audio.py  test_controls.py  test_dsp.py  test_file_source.py  test_rates.py  test_scope.py  test_sdr.py  test_streaming.py
