[project]
name = "oscope-me"
version = "0.1.0"
description = "Tune an FM stereo broadcast with an RTL-SDR and play it as X/Y oscilloscope music"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sounddevice>=0.4",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
oscope-me = "oscope_me.cli:main"
oscope = "oscope_me.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["oscope_me"]
